test/FAIL/setcmd/invalid_arguments/07_test_set.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="invalid argument"
#-------

load boucle.o
set me 0x1000 word &